--- a/frontend/src/components/LoginFormModal/LoginFormPage.css
+++ b/frontend/src/components/LoginFormModal/LoginFormPage.css
@@ -35,3 +35,9 @@
   color: white;
   font-weight: bold;
 }
+
+#login-button:hover {
+  background-color: white;
+  color: red;
+  border: 2px solid red;
+}
