--- a/frontend/src/components/SignupFormModal/SignupFormModal.css
+++ b/frontend/src/components/SignupFormModal/SignupFormModal.css
@@ -1,4 +1,4 @@
-#login-form {
+#signup-form {
   display: grid;
   grid-template-columns: 1fr;
   /* height: 650px; */
@@ -6,25 +6,25 @@
   padding: 0 2.3rem;
 }
 
-#login-header {
+#signup-header {
   text-align: center;
 }
 
-.login-credentials {
+.signup-credentials {
   display: flex;
   flex-direction: column;
   align-items: center;
   font-weight: bold;
 }
 
-.login-inputs {
+.signup-inputs {
   margin-top: 15px;
   margin-bottom: 5px;
   width: 100%;
   padding: 0.625rem;
 }
 
-#login-button {
+#signup-button {
   margin-top: 7px;
   margin-bottom: 10px;
   width: 100%;
@@ -37,7 +37,7 @@
   padding: 0.5rem 0;
 }
 
-#login-button:hover {
+#signup-button:hover {
   background-color: white;
   color: red;
   border: 2px solid red;
